# ValueWithError

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
ValueWithError/: CI.py  ImplNormalValueWithError.py  ImplSampleValueWithError.py  ImplStudentValueWithError.py  ImplValueWithoutError.py  ValueWithError.py  VectorOfValuesWithError.py  __init__.py  constructors.py  iface.py  pydantic_numpy.py  repr.py  repr_config.py  value_with_error.py  value_with_error_impl.py  values_with_error.py
tests/: test_ImplNormalValueWithError.py  test_ImplStudentValueWithError.py  test_ImplValueWithoutError.py  test_basic.py  test_interface.py  test_linear_transforms.py  test_pydantic.py
