[tool.poetry]
name = "ValueWithError"
version = "1.4.1"
description = "Simple implementation of the basic concept of Value with Error. No error propagation."
authors = ["Adam Ryczkowski <adam@statystyka.net>"]

packages = [{ include = "ValueWithError"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
overrides = "^7.4.0"
scipy = "^1.11.4"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
